# drop-app

./: .gitignore  README.md  build.mjs  package.json
.github/workflows/: release.yml
main/: app.vue  package.json  types.ts
main/components/: HeaderUserWidget.vue  LibrarySearch.vue
main/composables/: downloads.ts
main/pages/: news.vue  queue.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/client/: Cargo.toml
src-tauri/client/src/: app_status.rs  autostart.rs  compat.rs  lib.rs  user.rs
src-tauri/cloud_saves/: Cargo.toml
src-tauri/cloud_saves/src/: backup_manager.rs  conditions.rs  error.rs  lib.rs  metadata.rs  normalise.rs  path.rs  placeholder.rs  resolver.rs
src-tauri/database/: Cargo.toml
src-tauri/database/src/: db.rs  interface.rs  lib.rs  models.rs  platform.rs
src-tauri/download_manager/: Cargo.toml
src-tauri/download_manager/src/: download_manager_builder.rs  download_manager_frontend.rs  downloadable.rs  error.rs  frontend_updates.rs  lib.rs
src-tauri/download_manager/src/util/: download_thread_control_flag.rs  progress_object.rs  queue.rs  rolling_progress_updates.rs
src-tauri/games/: Cargo.toml
src-tauri/games/src/: lib.rs  library.rs  scan.rs  state.rs
src-tauri/games/src/collections/: collection.rs
src-tauri/games/src/downloads/: download_agent.rs  download_logic.rs  drop_data.rs  error.rs  mod.rs  utils.rs  validate.rs
src-tauri/process/: Cargo.toml
src-tauri/process/src/: error.rs  format.rs  lib.rs  process_handlers.rs  process_manager.rs
src-tauri/remote/: Cargo.toml
src-tauri/remote/src/: auth.rs  cache.rs  error.rs  fetch_object.rs  lib.rs  requests.rs  server_proto.rs  utils.rs
src-tauri/src/: client.rs  collections.rs  download_manager.rs  downloads.rs  games.rs  lib.rs  process.rs  remote.rs  settings.rs
src-tauri/src/client/: cleanup.rs  commands.rs
src-tauri/src/database/: commands.rs  db.rs  models.rs  scan.rs
src-tauri/src/download_manager/: commands.rs  download_manager_builder.rs  download_manager_frontend.rs  downloadable.rs
src-tauri/src/download_manager/util/: progress_object.rs  queue.rs  rolling_progress_updates.rs
src-tauri/src/error/: application_download_error.rs  cache_error.rs  library_error.rs  mod.rs  process_error.rs  remote_access_error.rs
src-tauri/src/games/: commands.rs  library.rs  state.rs
src-tauri/src/games/collections/: collection.rs  commands.rs
src-tauri/src/games/downloads/: commands.rs  download_agent.rs  download_logic.rs  drop_data.rs  manifest.rs  validate.rs
src-tauri/src/process/: commands.rs  process_handlers.rs  process_manager.rs
src-tauri/src/remote/: auth.rs  cache.rs  commands.rs  fetch_object.rs  server_proto.rs  utils.rs
src-tauri/src/utils/: app_emit.rs  download_manager_send.rs  lock.rs  webbrowser_open.rs
src-tauri/utils/: Cargo.toml
src-tauri/utils/src/: app_emit.rs  download_manager_send.rs  lib.rs  lock.rs  webbrowser_open.rs
